<resources>
    <string name="app_name">Twitter_Kotlin</string>
    <!-- Back4app configuration strings -->
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id">vxeNA1vAjx3Z8owOp2GyCyVOHvX3ltVXT5khbUb4</string>
    <string name="back4app_client_key">k4LdHyPEE5Mz4b3feY3IS1m2i1GygzC53X8jZlSE</string>

    <string name="text_username">Phone, email or username</string>
    <string name="text_password">Password</string>
    <string name="text_forget_your_password">Forgot password?</string>
    <string name="text_login_title">Log in to Twitter.</string>
    <string name="text_recover_password_title">Find your Twitter account</string>
    <string name="text_login">Log in</string>
    <string name="text_log_out">Log Out</string>
    <string name="text_change_password">Change password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="text_required_field">This field is required</string>
    <string name="text_progress_dialog_loading">Loading...</string>
    <string name="text_name">Username</string>
    <string name="text_next">Next</string>
    <string name="text_sign_up">Sign up</string>
    <string name="text_alert_account_succes">¡Congratulations!\nyour account has been created successfully</string>
    <string name="text_accept">Accept</string>
    <string name="text_email">Email</string>
    <string name="text_invalid_email">Invalid email</string>
    <string name="text_enter_email">Enter your email</string>
    <string name="text_tweet">Tweet</string>
    <string name="text_feed">Your Feed</string>
    <string name="text_openDrawer">Open</string>
    <string name="text_closeDrawer">Close</string>
    <string name="text_followers">Followers</string>
    <string name="text_sentiment_positive">Tweet Positive</string>
    <string name="text_sentiment_neutral">Tweet Neutral</string>
    <string name="text_sentiment_negative">Tweet Negative</string>
    <string name="text_create_account">Create your account</string>
    <string name="text_confirm_password">Confirm password</string>
    <string name="text_password_not_match">Password does not match</string>
    <string name="text_alert_reset_password">An email has been sent\nto reset your password</string>
    <string name="text_reset_password">Reset Your Password</string>
    <string name="text_cancel">CANCEL</string>
    <string name="text_general_feed">General Feed</string>
</resources>
